--- a/index.html
+++ b/index.html
@@ -91,10 +91,8 @@
 		 <h4>Welcome </h4>
 		
 		<div style="clear: both; margin-bottom: 100pt"></div>
-		<img src="Photon.jpg" class="img.admin; team class" alt="Photon">
-		 
-                       
-			     </section>
+		<img src="Photon.jpg" class="img.admin" alt="Photon">
+		
 			     </div>
         <div class="copy-vv-right text-center pb-3">
             <p>© 2023 Photon SCNSM. All rights reserved.
