--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
 		<div style="clear: both; margin-bottom: 70pt; team-class"></div>
 		 <h4>Welcome </h4>
 		
-		<div style="clear: both; margin-bottom: 100pt"></div>
+		<div style="clear: both; margin-bottom: 100pt; team-class"></div>
 		<img src="Photon.jpg" class="img.admin" alt="Photon">
 		
 			     </div>
+		<div style="clear: both; margin-bottom: 150pt"></div>
         <div class="copy-vv-right text-center pb-3">
             <p>© 2023 Photon SCNSM. All rights reserved.
             </p>
