--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <header class="header" data-header>
     <div class="container">
       <!--logo-->
-        <h1> <style="color:MediumSeaGreen;"; style="text-align:center;">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
+        <h1> <style="color:MediumSeaGreen;"; style="team-class">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
 
 
   </header>
@@ -90,8 +90,8 @@
 		<div style="clear: both; margin-bottom: 70pt; team-class"></div>
 		 <h4>Welcome </h4>
 		
-		<div style="clear: both; margin-bottom: 100pt; team-class"></div>
-		<img src="Photon.jpg" class="img.admin" alt="Photon">
+		<div style="clear: both; margin-bottom: 100pt"></div>
+		<img src="Photon.jpg" class="img.admin; team-class" alt="Photon">
 		
 			     </div>
 		<div style="clear: both; margin-bottom: 150pt"></div>
