--- a/vision.html
+++ b/vision.html
@@ -34,10 +34,9 @@
                    <section id="tab2" class="inner-vv-wrap" >
                        <h3 class="head-vl">Vision and Mission</h3>
 			    <div style="clear: both; margin-bottom: 100pt"></div> 
-			    <div style="portfolio-item; team-class">
-                        <p>Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
+                        <p><a style="team-class">Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
 				Our mission is to bridge the gap between experts in these fields, passionate individuals, and aspiring students. Through a diverse range of activities and specialized training courses, we aim to facilitate knowledge sharing, ignite curiosity, and inspire the next generation of scientific pioneers.
-				Join us on this fascinating journey of discovery, exploration, and enlightenment. Together, we can unravel the mysteries of the cosmos and expand the horizons of human understanding.
+				Join us on this fascinating journey of discovery, exploration, and enlightenment. Together, we can unravel the mysteries of the cosmos and expand the horizons of human understanding.<a>
 			    </p>
 		
                         </div>
