--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<div style="clear: both; margin-bottom: 70pt; team-class"></div>
 		 <h4>Welcome </h4>
 		
-		<div style="clear: both; margin-bottom: 100pt"></div>
+		<div style="team-class; margin-bottom: 70pt"></div>
 		<img src="Photon.jpg" class="img.admin; team-class" alt="Photon">
 		
 			     </div>
