--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
 </head>
 
 </body>
-	 </section>
 	  <section id="tab5" class="inner-vv-wrap" >
 		   <h3 class="head-vl"> How to find us</h3>
+		  <div style="clear: both; margin-bottom: 70pt; team-class"></div>
  <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
 			<p> <a href="https://www.facebook.com/Photon.SCNSM">Facebook</a></p>
                     </section>
