--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
 </body>
 	
  <section id="tab5" class="inner-vv-wrap" >
+	  <div style="team-class"></div>
                         <h3 class="head-vl"> How to find us </h3>
                       <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
 	 	<p> <a href="https://www.facebook.com/Photon.SCNSM">Facebook</a></p>
