--- a/vision.html
+++ b/vision.html
@@ -34,9 +34,9 @@
                    <section id="tab2" class="inner-vv-wrap" >
 			    <div style="team-class; margin-bottom: 100pt"></div> 
                        <h3 class="head-vl">Vision and Mission</h3>
-                        <p>Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects.</p>
+                        <p><stronge>Our vision<stronge> is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects.</p>
 				   <p>We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.</p>
-				<p>Our mission is to bridge the gap between experts in these fields, passionate individuals, and aspiring students.</p>
+				<p><stronge>Our mission<stronge> is to bridge the gap between experts in these fields, passionate individuals, and aspiring students.</p>
 				   <p>Through a diverse range of activities and specialized training courses, we aim to facilitate knowledge sharing, ignite curiosity, and inspire the next generation of scientific pioneers.</p>
 				<p>Join us on this fascinating journey of discovery, exploration, and enlightenment. Together, we can unravel the mysteries of the cosmos and expand the horizons of human understanding.
 			    </p>
