--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		 <h4>Welcome </h4>
 		
 		<div style="team-class; margin-bottom: 70pt"></div>
-		<img src="Photon.jpg" class="img.admin; team-class" alt="Photon">
+		<img src="Photon.jpg" class="team-class" alt="Photon">
 		
 			     </div>
 		<div style="clear: both; margin-bottom: 150pt"></div>
