--- a/vision.html
+++ b/vision.html
@@ -32,8 +32,9 @@
 
 </body>
                    <section id="tab2" class="inner-vv-wrap" >
-			    <div style="team-class; margin-bottom: 100pt"></div> 
+			    
                        <h3 class="head-vl">Vision and Mission</h3>
+			   <div style="text-align: centre; margin-bottom: 100pt"></div> 
                         <p><stronge>Our vision<stronge> is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects.</p>
 				   <p>We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.</p>
 				<p><stronge>Our mission<stronge> is to bridge the gap between experts in these fields, passionate individuals, and aspiring students.</p>
