--- a/team.html
+++ b/team.html
@@ -32,6 +32,7 @@
 </body>
  </section>
 		<section id="tab5" class="inner-vv-wrap" >
+			<div class="team-class">
                         <h3 class="head-vl"> Team </h3>
                        <div class="row">
 		<div class="col-md-12 portfolio-item">
