--- a/vision.html
+++ b/vision.html
@@ -32,7 +32,7 @@
 
 </body>
                    <section id="tab2" class="inner-vv-wrap" >
-			    
+			    <div class="team-class">
                        <h3 class="head-vl">Vision and Mission</h3>
 			   <div style="text-align: centre; margin-bottom: 100pt"></div> 
                         <p><stronge>Our vision<stronge> is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects.</p>
