--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <header class="header" data-header>
     <div class="container; team-class"">
       <!--logo-->
-        <h1> <style="color:MediumSeaGreen;"; style="team-class">The Photon Scientific Centre for Natural Sciences and Metaphysicsمركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
+        <h1> <style="color:MediumSeaGreen;"; style="team-class">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
 		<h1> <style="color:MediumSeaGreen;"; style="team-class">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
 
 
