--- a/team.html
+++ b/team.html
@@ -33,7 +33,7 @@
  </section>
 		<section id="tab5" class="inner-vv-wrap" >
 			 <div style="team-class"></div>
-                        <h3 class="head-vl"> Team </h3>
+                        <h3 class="head-vl"> Staff </h3>
                        <div class="row">
 		<div class="col-md-12 portfolio-item">
 		</div>
