--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
           </li>
 		<li>
-            <label for="tab5"><a href="./team.html" class="navbar-link">Team</a></label>
+            <label for="tab5"><a href="./team.html" class="navbar-link">Staff</a></label>
           </li>
 		<li>
             <label for="tab6"><a href="./contact.html" class="navbar-link">Contact us</a></label>
