--- a/upcoming.html
+++ b/upcoming.html
@@ -42,7 +42,7 @@
 			         <p><a href="https://tinyurl.com/ypzbkyb2" target="_blank" rel="noopener noreferrer">Epitaxial growth of (h-BNC) monolayer on different substrate materials</a></p>
 		    <p>by Alaa Mohammed Idris Bakhit, 11 Nov. 2023</a></p>
 			    <div style="clear: both; margin-bottom: 40pt"></div>
-			       <p><a href="https://tinyurl.com/ykua3xae" target="_blank" rel="noopener noreferrer">LTCC-Technology</p>
+			       <p><a href="https://tinyurl.com/ykua3xae" target="_blank" rel="noopener noreferrer">LTCC-Technology</a></p>
 		    <p>by Dr Mohamed Ashari, 28 Oct. 2023</a></p>
 			    <div style="clear: both; margin-bottom: 40pt"></div>
 			    	<p><a href="https://tinyurl.com/ad774jwc" target="_blank" rel="noopener noreferrer">Studies of interacting galaxies and the effect of the environment on their evolution</a></p>
