--- a/services.html
+++ b/services.html
@@ -23,6 +23,35 @@
     rel="stylesheet">
 
 </body>
+	 <div>
+	          <!--tabs-->
+      <nav class="navbar" data-navbar>
+        <ul class="navbar-list">
+          <li>
+                    <label for="tab1"><a href="./index.html" class="navbar-link">Home</a></label>
+            
+          </li>
+          <li>
+             <label for="tab2"><a href="./vision.html" class="navbar-link">Vision and Mission</a></label>
+          </li>
+          <li>
+             <label for="tab3"><a href="./upcoming.html" class="navbar-link">Past and Up-coming Events</a></label>
+          </li>
+          <li>
+            <label for="tab4"><a href="./services.html" class="navbar-link">Services</a></label>
+
+          </li>
+		<li>
+            <label for="tab5"><a href="./team.html" class="navbar-link">Staff</a></label>
+          </li>
+		<li>
+            <label for="tab6"><a href="./contact.html" class="navbar-link">Contact us</a></label>
+          </li>
+        </ul>
+      </nav>
+		 
+    </div>
+    </div>
 	
  <section id="tab4" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Services </h3>
