--- a/vision.html
+++ b/vision.html
@@ -31,6 +31,35 @@
 </head>
 
 </body>
+	 <div>
+	          <!--tabs-->
+      <nav class="navbar" data-navbar>
+        <ul class="navbar-list">
+          <li>
+                    <label for="tab1"><a href="./index.html" class="navbar-link">Home</a></label>
+            
+          </li>
+          <li>
+             <label for="tab2"><a href="./vision.html" class="navbar-link">Vision and Mission</a></label>
+          </li>
+          <li>
+             <label for="tab3"><a href="./upcoming.html" class="navbar-link">Past and Up-coming Events</a></label>
+          </li>
+          <li>
+            <label for="tab4"><a href="./services.html" class="navbar-link">Services</a></label>
+
+          </li>
+		<li>
+            <label for="tab5"><a href="./team.html" class="navbar-link">Staff</a></label>
+          </li>
+		<li>
+            <label for="tab6"><a href="./contact.html" class="navbar-link">Contact us</a></label>
+          </li>
+        </ul>
+      </nav>
+		 
+    </div>
+    </div>
                    <section id="tab2" class="inner-vv-wrap" >
 			 <div style="team-class"></div>
                        <h3 class="head-vl">Vision and Mission</h3>
