--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
     rel="stylesheet">
 </head>
-
+	
+<body class="dark_theme">
 	
   <!--
     header
