--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <header class="header" data-header>
     <div class="container; team-class"">
       <!--logo-->
-        <h1> <style="color:MediumSeaGreen;"; style="team-class">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
-		<h1> <style="color:MediumSeaGreen;"; style="team-class">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
+        <h1> <a style="color:MediumSeaGreen;"; style=" text-align: center">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
+		<h1> <a style="color:MediumSeaGreen;"; style=" text-align: center">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
 
 
   </header>
