--- a/index.html
+++ b/index.html
@@ -44,9 +44,14 @@
   -->
   <header class="header" data-header>
     <div class="container; team-class"">
-      <!--logo-->
-        <h1> <a style="color:MediumSeaGreen;"; style=" text-align: center">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
+	    <h1> <a style="color:MediumSeaGreen;"; style=" text-align: center">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
 		<h1> <a style="color:MediumSeaGreen;"; style=" text-align: center">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
+	    <div>
+      <!--logo-->
+        <div>
+		<img src="Photon.jpg" class="logo" alt="Photon">
+		
+			     </div>
 
 
   </header>
@@ -93,10 +98,7 @@
 		<div style="clear: both; margin-bottom: 70pt; team-class"></div>
 		 <h4>Welcome </h4>
 		
-		<div style="team-class; margin-bottom: 70pt"></div>
-		<img src="Photon.jpg" class="team-class" alt="Photon">
 		
-			     </div>
 		<div style="clear: both; margin-bottom: 150pt"></div>
         <div class="copy-vv-right text-center pb-3">
             <p>© 2023 Photon SCNSM. All rights reserved.
