--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <!--
     header
   -->
-  <header class="header" data-header>
-    <div class="container; team-class"">
+ 
+    <div class="header; container"">
 	    <h1> <a style="color:MediumSeaGreen;"; style=" text-align: center">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
 		<h1> <a style="color:MediumSeaGreen;"; style=" text-align: center">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
 	    <div>
