--- a/index.html
+++ b/index.html
@@ -44,19 +44,26 @@
   -->
  
     <div class="header; container"">
-	    <h1> <a style="color:MediumSeaGreen;"; style=" text-align: center">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
-		<h1> <a style="color:MediumSeaGreen;"; style=" text-align: center">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
+	    <h1> <a style="color:MediumSeaGreen">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
+		<h1> <a style="color:MediumSeaGreen">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
 	    <div>
       <!--logo-->
-        <div>
-		<img src="Photon.jpg" class="logo" alt="Photon">
-		
-			     </div>
+     
 
 
   </header>
 		    	<body class="dark_theme">
-		 <div>
+		
+  <!--
+    - Js link
+  -->
+  <script src="script.js"></script>
+</body>
+
+		
+<main>
+</main>
+		     <div>
 	          <!--tabs-->
       <nav class="navbar" data-navbar>
         <ul class="navbar-list">
@@ -86,19 +93,13 @@
     </div>
     </div>
 
-  <!--
-    - Js link
-  -->
-  <script src="script.js"></script>
-</body>
-
-		
-<main>
-</main>
 		<section id="tab1" class="inner-vv-wrap">
 		<div style="clear: both; margin-bottom: 70pt; team-class"></div>
 		 <h4>Welcome </h4>
+		   <div>
+		<img src="Photon.jpg" class="logo" alt="Photon">
 		
+			     </div>
 		
 		<div style="clear: both; margin-bottom: 150pt"></div>
         <div class="copy-vv-right text-center pb-3">
