--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
   <!--
     header
   -->
- 
-    <div class="header; container"">
-	    <h1> <a style="color:MediumSeaGreen">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
-		<h1> <a style="color:MediumSeaGreen">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
+ <header>
+    <div class="container"">
+	    <h1> <a style="color:MediumSeaGreen; team-class">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
+		<h1> <a style="color:MediumSeaGreen; team-class">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
 	    <div>
-      <!--logo-->
-     
+ 
+      </header>
 
 
-  </header>
+  
 		
   <!--
     - Js link
@@ -59,9 +59,7 @@
   <script src="script.js"></script>
 </body>
 
-	
-
-		     <div>
+ <div>
 			     <body class="dark_theme">
 	          <!--tabs-->
       <nav class="navbar" data-navbar>
@@ -88,8 +86,6 @@
           </li>
         </ul>
       </nav>
-		 
-    </div>
     </div>
 	    <main>
 </main>
