--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
   <!--
     header
   -->
- <header>
-    <div class="container"">
-	    <h1> <a style="color:MediumSeaGreen; team-class">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
-		<h1> <a style="color:MediumSeaGreen; team-class">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
+ <header class="header" data-header>
+    <div class="container">
+	    <h1> <a style="color:MediumSeaGreen">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
+		<h1> <a style="color:MediumSeaGreen">مركز فوتون للعلوم الطبيعية والميتافيزيقا</a></h1>
 	    <div>
  
       </header>
-
+    
 
   
 		
